Fixes margins and padding in sections with images on smaller screen sizes.

--- a/css/styles.css
+++ b/css/styles.css
@@ -591,18 +591,20 @@ form .user-details .input-box {
     }
 
     .img-side {
+        margin: 0;
+        padding: 0;
+        max-width: 100%;
         margin-inline: auto;
-        max-width: 50%;
         margin-bottom: 2rem;
-     }
+}
 
     .content-side {
-        margin-inline: auto;
+        margin: 0;
         padding: 0;
+        max-width: 100%;
     }
 
     figcaption {
-        margin-inline: auto;
         font-size: .85rem;
     }
 
